Java 11, 2 stage build, retry DB connection